# pytorch-mini

./: .gitignore  README.md  pyproject.toml
examples/: mnist.py
minitorch/: __init__.py  dataloaders.py  datasets.py  engine.py  loss.py  nn.py  optim.py  scalar.py  tensor.py
minitorch/deprecated/: nn_scalar.py
test/: mnist_util.py  test_dataloaders.py  test_engine.py  test_mnist.py  test_nn.py  test_scalar.py  test_tensor.py
test/deprecated/: test_nn_scalar.py
