[project]
name = "pytorch-mini"
version = "0.1.1"
description = "A minimal PyTorch-like autograd engine"
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "numpy"
]
license = { text = "MIT" }
authors = [
    { name = "Kausthub Jadhav", email = "j@dhav.me" },
]
keywords = ["pytorch", "autograd", "deep-learning", "educational"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
test = [
    "torch",
    "matplotlib"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["minitorch"]
